--- a/TextToSpeech/TextToSpeech.csproj
+++ b/TextToSpeech/TextToSpeech.csproj
@@ -75,6 +75,7 @@
     <UseVSHostingProcess>false</UseVSHostingProcess>
     <ErrorReport>prompt</ErrorReport>
     <Prefer32Bit>true</Prefer32Bit>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
     <OutputPath>bin\x64\Release\</OutputPath>
@@ -96,16 +97,22 @@
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
     <Compile Include="Authentication.cs" />
-    <Compile Include="CommunicationManager.cs" />
+    <Compile Include="CommunicationManagerGoogle.cs" />
+    <Compile Include="CommunicationManagerAzure.cs" />
+    <Compile Include="ICommunicationManager.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="AudioAmplitudeStream.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
       <SubType>Designer</SubType>
     </AppxManifest>
+    <Content Include="Assets\microphone.png" />
+    <Content Include="Assets\microphone_red.png" />
+    <Content Include="Assets\My-Project-f5e637856929.json" />
     <None Include="TextToSpeech_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
@@ -132,6 +139,12 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Google.Cloud.Speech.V1">
+      <Version>1.1.0-beta03</Version>
+    </PackageReference>
+    <PackageReference Include="Google.Cloud.TextToSpeech.V1">
+      <Version>1.0.0-beta02</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.CognitiveServices.Speech">
       <Version>1.2.0</Version>
     </PackageReference>
